# OmniSensHome

./: .gitignore  CMakeLists.txt  OmniSensHome.ota  README.md  Zigbee_OTA_Client.ota  my_index.json  partitions smal spiffs.csv  sdkconfig  sdkconfig.old
.github/workflows/: OTA-release.yml
Dokumentation/: Config_File.md  Geräte_mit_z2m_verbinden.md  OTA.md  Sensoren.md  Software_Struktur.md  Softwarestruktur.drawio  ToDo.txt
OTAcreate/: readme.md
components/AHTxx/: CMakeLists.txt  src.txt
components/MTS4x/: CMakeLists.txt  MTS4x.cpp  MTS4x.h  src.txt
components/OPT300x/: CMakeLists.txt  OPT300x.cpp  OPT300x.h  src.txt
components/SparkFun_ENS160/: CMakeLists.txt
components/ens16x/: CMakeLists.txt  src.txt
components/ld2412_local/: ld2412.c  uart_config.c
components/ld2412_local/include/: ld2412.h  uart_config.h
ld2412-example/: ENHANCED_README.md  sdkconfig
ld2412-example/main/: CMakeLists.txt  button_config.c  enhanced_ld2412.c  enhanced_ld2412.h  enhanced_uart_config.c  enhanced_uart_config.h  enhanced_uart_config_clean.c  idf_component.yml  ld2412-example.c
main/: Audio.cpp  Audio.h  CMakeLists.txt  DbSensor.cpp  DbSensor.h  I2SFullDuplex.cpp  I2SFullDuplex.h  Pin.h  RGB.cpp  RGB.h  Sensoren.cpp  Sensoren.h  TaskMonitor.cpp  TaskMonitor.h  clap_test.cpp  configLoader.c  configLoader.h  idf_component.yml  main.cpp  speaker.cpp  speaker.h  speaker_example.cpp
